update dependency version

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "area17/twill": "^2.*",
+        "area17/twill": "^2.6",
         "artesaos/seotools": "^0.20"
     }
 }
